# pi-daemon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  MEMORY_MONITORING_FIX.md  README.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: _build.yml  _code-review.yml  _hygiene.yml  _lint-format.yml  _sandbox.yml  _security.yml  _test.yml  auto-approve.yml  ci.yml  code-review.yml  commit-msg-scan.yml  pr-pipeline.yml  sandbox-test.yml  security.yml  test-quality-review.yml
crates/pi-daemon-api/: Cargo.toml
crates/pi-daemon-api/src/: lib.rs  openai_compat.rs  pi_routes.rs  server.rs  state.rs
crates/pi-daemon-api/tests/: api_integration.rs  openai_integration.rs
crates/pi-daemon-cli/: Cargo.toml
crates/pi-daemon-cli/src/: daemon.rs  main.rs
crates/pi-daemon-cli/tests/: daemon_tests.rs
crates/pi-daemon-kernel/src/: lib.rs
crates/pi-daemon-pi-manager/: Cargo.toml
crates/pi-daemon-pi-manager/src/: health.rs  lib.rs  spawner.rs
crates/pi-daemon-provider/src/: lib.rs
crates/pi-daemon-test-utils/: Cargo.toml
crates/pi-daemon-test-utils/src/: macros.rs  server.rs
crates/pi-daemon-types/src/: config.rs  lib.rs
docs/: API-Reference.md  Architecture.md  Configuration.md  Contributing.md  Home.md  PR-Reviews.md  Testing.md  _Sidebar.md
docs/templates/: bug-report.md  feature-request.md
scripts/: check-commit-msg.sh  review-queue.js
