[package]
name = "pi-daemon-cli"
version.workspace = true
edition.workspace = true
description = "CLI for pi-daemon"
publish = false

[[bin]]
name = "pi-daemon"
path = "src/main.rs"

[lib]
name = "pi_daemon_cli"
path = "src/lib.rs"

[dependencies]
pi-daemon-kernel = { path = "../pi-daemon-kernel" }
pi-daemon-api = { path = "../pi-daemon-api" }
pi-daemon-types = { path = "../pi-daemon-types" }
pi-daemon-pi-manager = { path = "../pi-daemon-pi-manager" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
